[292838]Convert BIRT NL features/plugins to support PDE build

--- a/plugins/sqltools/org.eclipse.datatools.sqltools.sqleditor.nl/build.properties
+++ b/plugins/sqltools/org.eclipse.datatools.sqltools.sqleditor.nl/build.properties
@@ -1,4 +1,9 @@
-source.. = src/
-output.. = bin/
-bin.includes = META-INF/,\
-               .
+bin.includes = fragment.xml,\
+               META-INF/,\
+               about.html,\
+               src/**/*.properties,\
+               plugin_??_??.properties,\
+               default_??_??.properties,\
+               nl/??/templates/*.properties
+src.includes = about.html
+customBuildCallbacks=customBuildCallbacks.xml
