[288540] ODA Dynamic Query Result Specification - minor fine tuning of API and Javadoc clarification

--- a/tests/org.eclipse.datatools.connectivity.oda.consumer.testdriver/plugin.xml
+++ b/tests/org.eclipse.datatools.connectivity.oda.consumer.testdriver/plugin.xml
@@ -248,7 +248,8 @@
            </variableRestriction>
         </aggregateType>
        </aggregateExpressionTypes>
-       <valueExpressionTypes>
+       <valueExpressionTypes
+             supportsNestedExpressions="true">
 	       <combinedOperatorTypes>
 	          <supportedOdaCombinedOperator
 	                id="Add">
