--- a/plugins/sqltools/org.eclipse.datatools.sqltools.sqleditor.nl/build.properties
+++ b/plugins/sqltools/org.eclipse.datatools.sqltools.sqleditor.nl/build.properties
@@ -1,7 +1,7 @@
 bin.includes = fragment.xml,\
                META-INF/,\
                about.html,\
-               src/**/*.properties,\
+               org/**/*.properties,\
                plugin_??_??.properties,\
                default_??_??.properties,\
                nl/??/templates/*.properties
