298497:  SQL Editor Templates are missing

--- a/plugins/org.eclipse.datatools.sqltools.sqleditor/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqleditor/build.properties
@@ -8,7 +8,8 @@ bin.includes = .,\
                plugin.properties,\
                default.properties,\
                about.html,\
-               META-INF/
+               META-INF/,\
+               templates/
                
 src.dir =		src/
 plugin.version =	1.0.0.200802191
