--- a/features/org.eclipse.birt.dtp.nl.feature/feature.properties
+++ b/features/org.eclipse.birt.dtp.nl.feature/feature.properties
@@ -15,7 +15,7 @@
 # This file should be translated.
 
 # "featureName" property - name of the feature
-featureName=Eclipse Language Pack Project
+featureName=Datatools Language Pack Project
 
 # "providerName" property - name of the company that provides the feature
 providerName=Eclipse.org
