CheckIn: Fix bugzilla bug 285477 TVT35:TCT384: PLK: New XML Data Source Profile - please resize the window

--- a/plugins/org.eclipse.datatools.enablement.oda.xml.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.xml.ui/plugin.properties
@@ -25,7 +25,7 @@ plugin.name=Eclipse Data Tools Platform XML ODA Designer
 newwizard.name=XML Data Source
 newwizard.description=Create a XML data source connection profile
 wizard.window.title=New XML Data Source Profile
-wizard.data.source.page.title=Define the URLs to the XML file and schema information
+wizard.data.source.page.title=Define XML Data Source
 wizard.data.set.window.title=New XML Data Set
 profile.propertypage.name=XML Data Source Connection Properties
 preference.datasetpreview=XML Data Set
