NEW - bug 298093: Did MS SQL SERVER 2000 change template ID? https://bugs.eclipse.org/bugs/show_bug.cgi?id=298093

--- a/plugins/org.eclipse.datatools.enablement.msft.sqlserver/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.msft.sqlserver/plugin.xml
@@ -350,5 +350,194 @@
             providerID="org.eclipse.datatools.enablement.msft.sqlserver.connectionProfile">
       </providerIDtoDriverCategoryID>
     </extension>
+ <extension
+       point="org.eclipse.datatools.connectivity.driverExtension">
+    <driverTemplate
+          createDefault="false"
+          emptyJarListIsOK="false"
+          id="org.eclipse.datatools.enablement.msft.sqlserver.2005.other.driverTemplate"
+          name="%org.eclipse.datatools.enablement.msft.sqlserver.2005.other.driverTemplate"
+          parentCategory="org.eclipse.datatools.enablement.msft.sqlserver.2005.driverCategory">
+       <properties>
+          <property
+                generated="false"
+                id="org.eclipse.datatools.connectivity.db.driverClass"
+                name="%driverClass"
+                required="true"
+                visible="true">
+          </property>
+          <property
+                generated="false"
+                id="org.eclipse.datatools.connectivity.db.vendor"
+                name="%driverVendor"
+                required="true"
+                value="SQL Server"
+                visible="false">
+          </property>
+          <property
+                generated="false"
+                id="org.eclipse.datatools.connectivity.db.version"
+                name="%driverVersion"
+                required="true"
+                value="2005"
+                visible="false">
+          </property>
+          <property
+                generated="false"
+                id="org.eclipse.datatools.connectivity.db.databaseName"
+                name="%driverDBName"
+                required="true"
+                visible="true">
+          </property>
+          <property
+                generated="false"
+                id="org.eclipse.datatools.connectivity.db.URL"
+                name="%driverConnectionURL"
+                required="true"
+                visible="true">
+          </property>
+          <property
+                generated="false"
+                id="org.eclipse.datatools.connectivity.db.username"
+                name="%driverUID"
+                required="false"
+                visible="true">
+          </property>
+          <property
+                generated="false"
+                id="org.eclipse.datatools.connectivity.db.password"
+                name="%driverPWD"
+                required="false"
+                visible="true">
+          </property>
+       </properties>
+    </driverTemplate>
+ </extension>
+ <extension
+       point="org.eclipse.datatools.connectivity.driverExtension">
+    <driverTemplate
+          createDefault="false"
+          emptyJarListIsOK="false"
+          id="org.eclipse.datatools.enablement.msft.sqlserver.2000.other.driverTemplate"
+          name="%org.eclipse.datatools.enablement.msft.sqlserver.2000.other.driverTemplate"
+          parentCategory="org.eclipse.datatools.enablement.msft.sqlserver.2000.driverCategory">
+       <properties>
+          <property
+                generated="false"
+                id="org.eclipse.datatools.connectivity.db.driverClass"
+                name="%driverClass"
+                required="true"
+                visible="true">
+          </property>
+          <property
+                generated="false"
+                id="org.eclipse.datatools.connectivity.db.vendor"
+                name="%driverVendor"
+                required="true"
+                value="SQL Server"
+                visible="false">
+          </property>
+          <property
+                generated="false"
+                id="org.eclipse.datatools.connectivity.db.version"
+                name="%driverVersion"
+                required="true"
+                value="2000"
+                visible="false">
+          </property>
+          <property
+                generated="false"
+                id="org.eclipse.datatools.connectivity.db.databaseName"
+                name="%driverDBName"
+                required="true"
+                visible="true">
+          </property>
+          <property
+                generated="false"
+                id="org.eclipse.datatools.connectivity.db.URL"
+                name="%driverConnectionURL"
+                required="true"
+                visible="true">
+          </property>
+          <property
+                generated="false"
+                id="org.eclipse.datatools.connectivity.db.username"
+                name="%driverUID"
+                required="false"
+                visible="true">
+          </property>
+          <property
+                generated="false"
+                id="org.eclipse.datatools.connectivity.db.password"
+                name="%driverPWD"
+                required="false"
+                visible="true">
+          </property>
+       </properties>
+    </driverTemplate>
+ </extension>
+ <extension
+       point="org.eclipse.datatools.connectivity.driverExtension">
+    <driverTemplate
+          createDefault="false"
+          emptyJarListIsOK="false"
+          id="org.eclipse.datatools.enablement.msft.sqlserver.2008.other.driverTemplate"
+          name="%org.eclipse.datatools.enablement.msft.sqlserver.2008.other.driverTemplate"
+          parentCategory="org.eclipse.datatools.enablement.msft.sqlserver.2008.driverCategory">
+       <properties>
+          <property
+                generated="false"
+                id="org.eclipse.datatools.connectivity.db.driverClass"
+                name="%driverClass"
+                required="true"
+                visible="true">
+          </property>
+          <property
+                generated="false"
+                id="org.eclipse.datatools.connectivity.db.vendor"
+                name="%driverVendor"
+                required="true"
+                value="SQL Server"
+                visible="false">
+          </property>
+          <property
+                generated="false"
+                id="org.eclipse.datatools.connectivity.db.version"
+                name="%driverVersion"
+                required="true"
+                value="2008"
+                visible="false">
+          </property>
+          <property
+                generated="false"
+                id="org.eclipse.datatools.connectivity.db.databaseName"
+                name="%driverDBName"
+                required="true"
+                visible="true">
+          </property>
+          <property
+                generated="false"
+                id="org.eclipse.datatools.connectivity.db.URL"
+                name="%driverConnectionURL"
+                required="true"
+                visible="true">
+          </property>
+          <property
+                generated="false"
+                id="org.eclipse.datatools.connectivity.db.username"
+                name="%driverUID"
+                required="false"
+                visible="true">
+          </property>
+          <property
+                generated="false"
+                id="org.eclipse.datatools.connectivity.db.password"
+                name="%driverPWD"
+                required="false"
+                visible="true">
+          </property>
+       </properties>
+    </driverTemplate>
+ </extension>
 	
 </plugin>
