NEW - bug 290785: cannot delete connection profile when the profile name contains prefix or trailing blanks https://bugs.eclipse.org/bugs/show_bug.cgi?id=290785

--- a/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
@@ -19,7 +19,7 @@ ExportProfilesDialog.button.text=&Select all
 ImportProfilesDialog.button.text=&Browse...
 ExportProfilesDialog.label.text=Specify a &file name:
 ImportProfilesDialog.label.text=Specify a &file name:
-ImportProfilesDialog.text.text=Note: the connection profile to be imported should be those types you can \n  create using the new connection profile wizard, unsupported types of \n  connection profiles will be discarded.
+ImportProfilesDialog.text.text=Note\: the connection profile to be imported should be those types you can \n  create using the new connection profile wizard, unsupported types of \n  connection profiles will be discarded.
 ExportProfilesDialog.null.title=Export Connection Profiles
 ImportProfilesDialog.null.title=Import Connection Profiles
 ExportProfilesDialog.btnEncryption.text=&Encrypt file content
@@ -64,6 +64,7 @@ NewConnectionProfileWizard.create.failure = Create connection profile failure
 NewConnectionProfileWizardPage.Status.DuplicateName = Connection profile name already exists!
 NewConnectionProfileWizardPage.Status.NoName = Please specify connection profile name!
 NewConnectionProfileWizardPage.Status.NoRepository = Please specify a repository.
+NewConnectionProfileWizardPage.Status.NoSpacesInName = Connection profile name must not start or end with spaces!
 NewConnectionProfileWizardPage.title = Create Connection Profile
 NewConnectionProfileWizardPage.desc = Enter the profile information.
 NewConnectionProfileWizardPage.cp_name = Na&me:
@@ -79,7 +80,7 @@ NewConnectionProfileWizardPage.localRepository = Create in workspace repository 
 NewConnectionProfileWizardPage.chooseRepository = Choose repository:
 ConnectionProfileDetailsPage.Button.TestConnection = &Test Connection
 ConnectionProfileDetailsPage.AskConfirmation = Confirm Dialog
-ConnectionProfileDetailsPage.AskReconnect = This connection profile\'s connection information has been changed, do you want to reconnect the server?
+ConnectionProfileDetailsPage.AskReconnect = This connection profile's connection information has been changed, do you want to reconnect the server?
 SummaryWizardPage.title = Summary
 SummaryWizardPage.description = Information gathered from previous pages.
 SummaryWizardPage.property = Property
@@ -90,6 +91,7 @@ rename.dialog.title = Rename Dialog
 rename.dialog.message = Please input a new connection profile name:
 rename.dialog.errmsg.existing = Name exists, please input a different one!
 rename.dialog.errmsg.invalid = Invalid name, please type in a valid name!
+rename.dialog.errmsg.NoSpacesInName = Connection profile name must not start or end with spaces!
 error.connect = {1}.  See log file for more details.
 error.contentExtension =Error connecting to the "{0}" extension on profile "{1}" (Error: {2})
 CPVersionPropertyPage.desc=Version information for {0}.\nThis information was obtained from the last connection attempt.  If the last attempt to connect was unsuccessful, no version information will be available.
