[303393] Modified plugin o.e.d.sqltools.result.ui to add Parameter Viewer extension and example implementation

--- a/plugins/org.eclipse.datatools.sqltools.result.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.sqltools.result.ui/plugin.properties
@@ -13,7 +13,7 @@ SQLResultsView.full.name=SQL Results View
 SQLResultsView.display.options=SQL Results View Options
 SQLResultsView.export.options=Export Format Options
 SQLResultsView.history.page=History Options
-SQLResultsView.resultsetviewer.page=Result Set Viewer Options
+SQLResultsView.resultsetviewer.page=Viewer Options
 RemoveResultAction.command.name=Remove Result
 RemoveAllResultAction.command.name=Remove All Visible Results
 TerminateInstanceAction.command.name=Terminate Result
