--- a/plugins/org.eclipse.datatools.sqltools.result.ui/src/org/eclipse/datatools/sqltools/result/ui/PluginResources.properties
+++ b/plugins/org.eclipse.datatools.sqltools.result.ui/src/org/eclipse/datatools/sqltools/result/ui/PluginResources.properties
@@ -32,6 +32,7 @@ ResultSection_warnning_rowshidden=Some records are hidden
 ResultSection_resultset_tooltip=Total {0} records, {1} records shown
 ResultSetLabelProvider_longdata=<LONG>
 ResultSection_resultset_tooltip1= Total {0} records shown
+MultibleTabsEllipsisToolTipText=Show contents in a message box
 MultipleTabsGridSection_parameter_name=Name
 MultipleTabsGridSection_parameter_type=Type
 MultipleTabsTextSection_parameter_name=Name
@@ -217,9 +218,9 @@ ExportFormatPage_fileencoding_defaultEncoding6 = US-ASCII
 ExportFormatPage_fileencoding_unsupportedEncoding = Unsupported Encoding
 
 ResultSetViewerPage_title = Result Set Viewer Options
-ResultSetViewerPage_group = Viewer for result sets
+ResultSetViewerPage_group = Viewer for result set values
 ResultSetViewer_copy_rows=&Copy Row(s)
-ResultSetViewerPage_select_viewer = &Select Viewer:
+ResultSetViewerPage_select_viewer = Select &result Viewer:
 ResultSetViewerPage_viewer_tooltip = Select viewer for displaying results
 ResultSetViewerPage_defaultViewer = Default Result Set Viewer
 
@@ -323,6 +324,15 @@ ResultHistoryPage_tooltip_auto_clean=Clean up result history when Eclipse shuts 
 # Others
 ##########################################################
 Parameter_constructor_error=Error occurs when constructing Parameter instance: invalid parameters
+
+ParameterViewerPage_group = Viewer for parameter values 
+ParameterViewerPage_select_viewer = Select &param viewer:
+ParameterViewer_ellipsisEnabledValue = Display ellipis when the value length exceeds
+ParameterViewerPreferencePage_parameterResultOptions_LessthanOne = Can't be less than one
+ParameterViewerPreferencePage_parameterResultOptions_maxParmeterCount_tooltip = If the parameter value is greater than the specified length, then enable an ellipsis [...] button to view the value in a separate window
+ParameterViewerPage_viewer_tooltip = Select viewer for displaying results
+ParameterViewerPage_defaultViewer = Default Parameter Viewer
+
 ResultSetObject_constructor_error=Error occurs when constructing ResultSetObject instance: invalid parameters
 Debugger_Images_malformedURLException=Failed to get Image descriptor for {0}
 ResultsViewAPI_append_resultset_error=Error occurs when appending result set on SQL Results View
