--- a/plugins/org.eclipse.datatools.sqltools.result.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.sqltools.result.ui/plugin.xml
@@ -2,6 +2,7 @@
 <?eclipse version="3.2"?>
 <plugin>
 <extension-point id="resultSetViewer" name="Additional Viewers for ResultSets" schema="schema/resultSetViewer.exsd"/>
+<extension-point id="parameterViewer" name="Additional Viewers for Parameter" schema="schema/parameterViewer.exsd"/>
    <extension
          point="org.eclipse.ui.views">
       <view
