[303719] Updated plugin o.e.d.modelbase.sql.query to include MERGE statement support (plus other fixes)

--- a/plugins/org.eclipse.datatools.modelbase.sql.query/plugin.xml
+++ b/plugins/org.eclipse.datatools.modelbase.sql.query/plugin.xml
@@ -13,4 +13,12 @@
             implPackageName="org.eclipse.datatools.modelbase.sql.query.impl"/>
    </extension>
 
+   <extension point="org.eclipse.emf.ecore.generated_package">
+      <package
+            uri="http:///org/eclipse/datatools/modelbase/sql/query/SQLQueryModel.ecore"
+            class="org.eclipse.datatools.modelbase.sql.query.SQLQueryModelPackage"
+            genModel="model/SQLQueryModel.genmodel">
+      </package>
+    </extension>
+    
 </plugin>
