--- a/plugins/org.eclipse.datatools.connectivity.sqm.core/src/org/eclipse/datatools/connectivity/sqm/internal/core/rte/fe/GenericDdlGeneration.properties
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.core/src/org/eclipse/datatools/connectivity/sqm/internal/core/rte/fe/GenericDdlGeneration.properties
@@ -35,3 +35,7 @@ ADDITIONAL_ELEMENTS_DES = Generate additional elements
 GENERATE_GENERATE_ASSERTION_DES = Generate assertions
 GENERATE_USER_DEFINED_TYPE = Generate user defined types
 GENERATE_USER_DEFINED_TYPE_DES = Generate user defined types
+
+DELTA_DDL_MONITOR_TASK_LOOKING_FOR_CHANGES= Looking for the changes...
+DELTA_DDL_MONITOR_TASK_ANALYZING_CHANGES= Analyzing the changes...
+DELTA_DDL_MONITOR_TASK_GENERATING_DDL= Generating the DDL...
