[292018] Applied patch from Joe Wu which updates the following plugins:  o.e.d.sqltools.dbugger.core, o.e.d.sqltools.debugger.core.ui, o.e.d.sqltools.routineeditor, o.e.d.sqltools.routineeditor.ui to fix problems caused by the sqldevtools core/ui split in DTP 1.7

--- a/plugins/org.eclipse.datatools.sqltools.debugger.core.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.sqltools.debugger.core.ui/plugin.xml
@@ -216,7 +216,7 @@
          point="org.eclipse.debug.core.breakpoints">
       <breakpoint
             class="org.eclipse.datatools.sqltools.debugger.breakpoint.SPLineBreakpoint"
-            markerType="org.eclipse.datatools.sqltools.debugger.core.spLineBreakpointMarker"
+            markerType="org.eclipse.datatools.sqltools.debugger.core.ui.spLineBreakpointMarker"
             id="spLineBreakpoint"/>
    </extension>
    
