--- a/plugins/org.eclipse.datatools.sqltools.routineeditor.ui/.settings/org.eclipse.jdt.core.prefs
+++ b/plugins/org.eclipse.datatools.sqltools.routineeditor.ui/.settings/org.eclipse.jdt.core.prefs
@@ -1,7 +1,8 @@
-#Mon Feb 09 16:15:54 CST 2009
+#Mon Apr 05 14:30:30 PDT 2010
 eclipse.preferences.version=1
-org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.2
-org.eclipse.jdt.core.compiler.compliance=1.4
-org.eclipse.jdt.core.compiler.problem.assertIdentifier=warning
-org.eclipse.jdt.core.compiler.problem.enumIdentifier=warning
-org.eclipse.jdt.core.compiler.source=1.3
+org.eclipse.jdt.core.compiler.codegen.inlineJsrBytecode=enabled
+org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.5
+org.eclipse.jdt.core.compiler.compliance=1.5
+org.eclipse.jdt.core.compiler.problem.assertIdentifier=error
+org.eclipse.jdt.core.compiler.problem.enumIdentifier=error
+org.eclipse.jdt.core.compiler.source=1.5
