--- a/plugins/org.eclipse.datatools.connectivity.oda.template.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.template.ui/plugin.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2006, 2007 Actuate Corporation.
+# Copyright (c) 2006, 2010 Actuate Corporation.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -17,8 +17,8 @@ template.runtimeDriver.name=ODA Data Source Runtime Driver
 template.runtimeDriver.desc=\
 This wizard creates a plug-in for an Open Data Access (ODA) data source runtime driver.\
 <p>An ODA runtime driver plug-in does <b>not</b> make contributions to the UI. \
-Do not select the UI contribution check-box under Plug-in Options in the previous page.</p>\
-<p><b>Extension Used</b></p>\
+Do not select the UI contribution check-box under Options in the previous page.</p>\
+<p><b>Extensions Used</b></p>\
 <li>org.eclipse.datatools.connectivity.oda.dataSource</li>\
 <li>org.eclipse.datatools.connectivity.connectionProfile</li>
 template.designer.name=ODA Data Source Designer
