[307544]org.eclipse.datatools.connectivity.oda.designer.feature should be split out from o.e.d.connectivity.feature

--- a/features/org.eclipse.datatools.sdk.feature/build.properties
+++ b/features/org.eclipse.datatools.sdk.feature/build.properties
@@ -8,6 +8,7 @@ generate.feature@org.eclipse.datatools.modelbase.feature.source=org.eclipse.data
 generate.feature@org.eclipse.datatools.connectivity.feature.source=org.eclipse.datatools.connectivity.feature
 generate.feature@org.eclipse.datatools.sqldevtools.feature.source=org.eclipse.datatools.sqldevtools.feature
 generate.feature@org.eclipse.datatools.connectivity.oda.designer.feature.source = org.eclipse.datatools.connectivity.oda.designer.feature
+generate.feature@org.eclipse.datatools.connectivity.oda.designer.core.feature.source = org.eclipse.datatools.connectivity.oda.designer.core.feature
 generate.feature@org.eclipse.datatools.connectivity.oda.feature.source = org.eclipse.datatools.connectivity.oda.feature
 generate.feature@org.eclipse.datatools.sqldevtools.data.feature.source = org.eclipse.datatools.sqldevtools.data.feature
 generate.feature@org.eclipse.datatools.sqldevtools.ddl.feature.source = org.eclipse.datatools.sqldevtools.ddl.feature
